--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <body>
-<a href="www-personal.umich.edu/~jwangumi/index.html">Jie Wang's Homepage</a> <br />
+<a href="http://www-personal.umich.edu/~jwangumi/index.html">Jie Wang's Homepage</a> <br />
 </body>
 </html>
